Account for the block depth. bug 349482, r=brendan